updating logos & colors for 2024-2025 (#42)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -68,19 +68,8 @@
             McGill University.
           </li>
           <li>
-            I've done two internships with the Chicago Blackhawks:
-            <ul>
-              <li>
-                June - August '22: Worked in the Business Strategy and Analytics
-                department to create data pipelines for retail data and for
-                grassroots hockey initiatives.
-              </li>
-              <li>
-                January - August '23: Worked in the Hockey Strategy and
-                Analytics department to develop a baseball-inspired proprietary
-                analytics software.
-              </li>
-            </ul>
+            I interned for the Chicago Blackhawks in summer 2022 & spring-summer
+            2023', and with the Boston Red Sox in summer 2024.
           </li>
           <li>
             I'm a big hockey guy, but I'm also known to watch F1 races at all
