--- a/src/app/leaderboard/goalies/goalies.component.html
+++ b/src/app/leaderboard/goalies/goalies.component.html
@@ -53,23 +53,80 @@
       </a>
     </td>
   </ng-container>
-  <ng-container matColumnDef="starts">
+  <ng-container matColumnDef="lowDanger">
     <th
       mat-header-cell
       *matHeaderCellDef
-      mat-sort-header="starts"
-      [matTooltip]="getTooltip('starts')"
+      mat-sort-header="lowDanger"
+      [matTooltip]="getTooltip('lowDanger')"
       matTooltipPosition="above"
     >
-      Starts
+      Low Danger
     </th>
     <td
       mat-cell
       *matCellDef="let player"
-      [ngStyle]="getCellColors(player.starts, 'starts')"
+      [ngStyle]="getCellColors(player.lowDanger, 'lowDanger')"
       class="small-column"
     >
-      {{ player.starts }}
+      {{ player.lowDanger | number : "1.2-2" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="medDanger">
+    <th
+      mat-header-cell
+      *matHeaderCellDef
+      mat-sort-header="medDanger"
+      [matTooltip]="getTooltip('medDanger')"
+      matTooltipPosition="above"
+    >
+      Med Danger
+    </th>
+    <td
+      mat-cell
+      *matCellDef="let player"
+      [ngStyle]="getCellColors(player.medDanger, 'medDanger')"
+      class="small-column"
+    >
+      {{ player.medDanger | number : "1.2-2" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="highDanger">
+    <th
+      mat-header-cell
+      *matHeaderCellDef
+      mat-sort-header="highDanger"
+      [matTooltip]="getTooltip('highDanger')"
+      matTooltipPosition="above"
+    >
+      High Danger
+    </th>
+    <td
+      mat-cell
+      *matCellDef="let player"
+      [ngStyle]="getCellColors(player.highDanger, 'highDanger')"
+      class="small-column"
+    >
+      {{ player.highDanger | number : "1.2-2" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="gsax">
+    <th
+      mat-header-cell
+      *matHeaderCellDef
+      mat-sort-header="gsax"
+      [matTooltip]="getTooltip('gsax')"
+      matTooltipPosition="above"
+    >
+      GSAx
+    </th>
+    <td
+      mat-cell
+      *matCellDef="let player"
+      [ngStyle]="getCellColors(player.gsax, 'gsax')"
+      class="small-column"
+    >
+      {{ player.gsax | number : "1.2-2" }}
     </td>
   </ng-container>
   <ng-container matColumnDef="shootout">
@@ -89,44 +146,6 @@
       class="small-column"
     >
       {{ player.shootout }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="pk">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header="pk"
-      [matTooltip]="getTooltip('pk')"
-      matTooltipPosition="above"
-    >
-      PK
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let player"
-      [ngStyle]="getCellColors(player.pk, 'pk')"
-      class="small-column"
-    >
-      {{ player.pk }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="ev">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header="ev"
-      [matTooltip]="getTooltip('ev')"
-      matTooltipPosition="above"
-    >
-      EV
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let player"
-      [ngStyle]="getCellColors(player.ev, 'ev')"
-      class="small-column"
-    >
-      {{ player.ev }}
     </td>
   </ng-container>
 
