Added percent pipe to shootout column

--- a/src/app/leaderboard/goalies/goalies.component.html
+++ b/src/app/leaderboard/goalies/goalies.component.html
@@ -145,7 +145,7 @@
       [ngStyle]="getCellColors(player.shootout, 'shootout')"
       class="small-column"
     >
-      {{ player.shootout }}
+      {{ player.shootout | percent }}
     </td>
   </ng-container>
 
