--- a/src/app/scores/scores.component.html
+++ b/src/app/scores/scores.component.html
@@ -1,4 +1,4 @@
-<nav-bar></nav-bar>
+<!-- <nav-bar></nav-bar>
 <div class="centered-scoreboard">
   <h1>Scoreboard for {{ selectedDate }}</h1>
   <div class="score-card-container">
@@ -170,4 +170,4 @@
       </mat-card>
     </ng-container>
   </ng-template>
-</div>
+</div> -->
