--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,11 +1,92 @@
 <nav-bar></nav-bar>
-<h1
-  style="
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    margin: 10px;
-  "
->
-  New Landing Page Coming Soon!
-</h1>
+<div class="landing-container">
+  <span class="release-header">Welcome to PierreAnalytics!</span>
+  <span class="release-subheader">
+    Your source for clean and colorful NHL analytics.
+  </span>
+  <div *ngIf="luckyPlayer$ | async as luckyPlayer" class="lucky-player-widget">
+    <span class="lucky-subheader">Your Lucky Player is:</span>
+    <a
+      class="lucky-player"
+      href="#"
+      [routerLink]="['/', luckyPlayer.playerID, 'year', 2024]">
+      <img
+        src="{{
+          'https://assets.nhle.com/mugs/nhl/latest/' +
+            luckyPlayer.playerID +
+            '.png'
+        }}"
+        class="logo" />
+      {{ luckyPlayer.firstName }}
+      {{ luckyPlayer.lastName }}
+    </a>
+  </div>
+  <div class="landing-widgets">
+    <div class="release-widget">
+      <span class="release-header">Release Notes</span>
+      <div class="notes-table" *ngIf="releaseNotes$ | async as releaseNotes">
+        <div class="release-notes" *ngFor="let note of releaseNotes">
+          <div class="note-header">
+            <span class="note-description">
+              <span class="note-title">{{ note.title }}</span>
+              by {{ note.author }}
+            </span>
+            <span>{{ note.date | date : "mediumDate" }}</span>
+          </div>
+          <div class="note-body">
+            <span class="note-post">
+              <img
+                src="assets/{{ imageMap[note.author] }}"
+                class="masked-image"
+                alt="Fissure in Sandstone" />
+              {{ note.note }}
+            </span>
+            <a href="{{ note.githubLink }}" target="_blank">
+              <i class="fab fa-github github-mark"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="twitter-feeds">
+      <iframe
+        loading="lazy"
+        height="500px"
+        width="300px"
+        src="https://syndication.twitter.com/srv/timeline-profile/screen-name/pierreanalytics?frame=false&hideBorder=false&hideFooter=false&hideHeader=true&hideScrollBar=true&origin=pierreanalytics&maxHeight=800px&showHeader=true&showReplies=false&transparent=false&theme=light"
+        frameborder="0"
+        scrolling="no"></iframe>
+      <iframe
+        loading="lazy"
+        height="500px"
+        width="300px"
+        src="https://syndication.twitter.com/srv/timeline-profile/screen-name/nhlxgbot?frame=false&hideBorder=false&hideFooter=false&hideHeader=true&hideScrollBar=true&origin=pierreanalytics&maxHeight=800px&showHeader=true&showReplies=false&transparent=false&theme=light"
+        frameborder="0"
+        scrolling="no"></iframe>
+    </div>
+  </div>
+  <!-- <div *ngIf="scores$ | async" class="scores">
+    <div *ngFor="let game of scores$ | async" class="score-bug">
+      <div class="score-cell">
+        <img
+          src="assets/teams/{{ game.awayTeamCity }} {{ game.awayTeamName }}.png"
+          class="team-logo" />
+        <span>{{ game.awayTeamName }}</span>
+        <span>{{ game.homeTeamRecord }}</span>
+      </div>
+      <div *ngIf="game.gameState != 'FUT'"></div>
+      <div class="middle-cell" *ngIf="game.gameState == 'FUT'">
+        <span>{{ game.gameType }}</span>
+        <span>{{ game.startTime | date : "short" }}</span>
+        <span style="text-align: center">{{ game.venue }}</span>
+      </div>
+      <div class="score-cell">
+        <img
+          src="assets/teams/{{ game.homeTeamCity }} {{ game.homeTeamName }}.png"
+          class="team-logo" />
+        <span>{{ game.homeTeamName }}</span>
+        <span>{{ game.homeTeamRecord }}</span>
+      </div>
+    </div>
+  </div> -->
+</div>
