--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,6 @@
 <nav
   class="navbar navbar-expand-lg navbar-dark bg-dark d-flex align-items-center"
-  [style.background-color]="navColor + ' !important'"
->
+  [style.background-color]="navColor + ' !important'">
   <div class="container-fluid">
     <!-- Button group for mobile layout -->
     <div class="container" style="justify-content: flex-start">
@@ -13,41 +12,35 @@
           <button
             type="button"
             class="btn btn-outline-secondary mobile-button"
-            [routerLink]="['/about']"
-          >
+            [routerLink]="['/about']">
             About
           </button>
 
           <button
             class="btn btn-outline-secondary mobile-button"
-            (click)="toggleDropdown()"
-          >
+            [routerLink]="['/leaderboard']">
             Leaderboards
 
             <ul
               class="dropdown-menu"
               style="text-transform: capitalize"
-              *ngIf="showDropdown"
-            >
+              *ngIf="showDropdown">
               <li
                 class="dropdown-item"
                 (click)="toggleDropdown()"
-                [routerLink]="['/leaderboard/skaters']"
-              >
+                [routerLink]="['/leaderboard/skaters']">
                 Skaters
               </li>
               <li
                 class="dropdown-item"
                 (click)="toggleDropdown()"
-                [routerLink]="['/leaderboard/goalies']"
-              >
+                [routerLink]="['/leaderboard/goalies']">
                 Goalies
               </li>
               <li
                 class="dropdown-item"
                 (click)="toggleDropdown()"
-                [routerLink]="['/leaderboard/teams']"
-              >
+                [routerLink]="['/leaderboard/teams']">
                 Teams
               </li>
             </ul>
@@ -55,16 +48,15 @@
           <button
             type="button"
             class="btn btn-outline-secondary mobile-button"
-            [routerLink]="['/standings']"
-          >
+            [routerLink]="['/standings']">
             Standings
           </button>
           <a
             href="https://ko-fi.com/pierreanalytics"
             target="_blank"
-            class="btn btn-outline-secondary mobile-button"
-            >Donate</a
-          >
+            class="btn btn-outline-secondary mobile-button">
+            Donate
+          </a>
         </div>
       </div>
       <!-- Buttons for desktop layout -->
@@ -74,8 +66,7 @@
             <button
               type="button"
               class="btn-outline-secondary normal-button"
-              [routerLink]="['/about']"
-            >
+              [routerLink]="['/about']">
               About
             </button>
           </li>
@@ -83,53 +74,23 @@
             <button
               type="button"
               class="btn-outline-secondary normal-button"
-              [routerLink]="['/scores']"
-            >
+              [routerLink]="['/dates']">
               Scores
             </button>
           </li> -->
           <li class="nav-item">
-            <div class="dropdown">
-              <button
-                class="dropdown-button btn-outline-secondary normal-button"
-                (click)="toggleDropdown()"
-              >
-                Leaderboards
-              </button>
-              <ul class="dropdown-menu" *ngIf="showDropdown">
-                <li
-                  class="dropdown-item"
-                  (click)="toggleDropdown()"
-                  [routerLink]="['/leaderboard/skaters']"
-                >
-                  <mat-icon> ice_skating</mat-icon>
-                  Skaters
-                </li>
-                <li
-                  class="dropdown-item"
-                  (click)="toggleDropdown()"
-                  [routerLink]="['/leaderboard/goalies']"
-                >
-                  <mat-icon> sports_hockey</mat-icon>
-                  Goalies
-                </li>
-                <li
-                  class="dropdown-item"
-                  (click)="toggleDropdown()"
-                  [routerLink]="['/leaderboard/teams']"
-                >
-                  <mat-icon> group</mat-icon>
-                  Teams
-                </li>
-              </ul>
-            </div>
+            <button
+              type="button"
+              class="btn-outline-secondary normal-button"
+              [routerLink]="['/leaderboard']">
+              Leaderboards
+            </button>
           </li>
           <li class="nav-item">
             <button
               type="button"
               class="btn-outline-secondary normal-button"
-              [routerLink]="['/standings']"
-            >
+              [routerLink]="['/standings']">
               Standings
             </button>
           </li>
@@ -137,8 +98,7 @@
             <a
               href="https://ko-fi.com/pierreanalytics"
               target="_blank"
-              class="btn-outline-secondary normal-button"
-            >
+              class="btn-outline-secondary normal-button">
               Donate
             </a>
           </li>
@@ -160,28 +120,25 @@
           class="form-control search-select-height"
           placeholder="Search Player Name"
           [formControl]="searchControl"
-          (input)="onSearchInputChange()"
-        />
+          (input)="onSearchInputChange()" />
         <div
           class="dropdown-search"
           aria-labelledby="dropdownMenuButton"
-          *ngIf="searchControl.value && filteredPlayers.length > 0"
-        >
+          *ngIf="searchControl.value && filteredPlayers.length > 0">
           <a
             class="dropdown-item"
             href="#"
             *ngFor="let player of filteredPlayers | slice : 0 : 7"
             [routerLink]="['/', player.playerID, 'year', year]"
-            (click)="clearSearchInput()"
-          >
+            (click)="clearSearchInput()">
             <img
               src="{{
                 'https://assets.nhle.com/mugs/nhl/latest/' +
                   player.playerID +
                   '.png'
               }}"
-              class="logo"
-            />{{ player.firstName }} {{ player.lastName }}
+              class="logo" />
+            {{ player.firstName }} {{ player.lastName }}
           </a>
         </div>
       </div>
