--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -86,37 +86,8 @@ mat-large-icon-button {
   align-items: center;
 }
 
-.team-logo {
-  width: 40px;
-  height: 40px;
-}
-
-.scores {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-
-.score-bug {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  align-items: center;
-  justify-content: space-between;
-  background-color: blanchedalmond;
-
-  width: 350px;
-}
 .score-bug:nth-child(2n-1) {
-  background-color: lightskyblue;
-}
-
-.score-cell {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 30%;
+  background-color: rgb(195, 200, 202);
 }
 
 .middle-cell {
@@ -124,7 +95,6 @@ mat-large-icon-button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 40%;
 }
 
 .landing-widgets {
@@ -183,6 +153,78 @@ mat-large-icon-button {
   border-radius: 50%;
 }
 
+.scores {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.score-bug {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+  gap: 10px;
+  width: 350px;
+  padding: 15px;
+  margin: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+}
+
+.score-bug:hover {
+  transform: translateY(-10px) rotateX(5deg);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.1), 0 20px 32px rgba(0, 0, 0, 0.2);
+}
+
+.score-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex: 1;
+  justify-content: center;
+  width: 30%;
+}
+
+.middle-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex: 2;
+  width: 40%;
+}
+
+.team-logo {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 5px;
+}
+
+span {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.score-cell span {
+  margin-bottom: 5px;
+}
+
+.middle-cell span {
+  margin-bottom: 3px;
+  color: #555;
+  font-size: 14px;
+}
+
+.middle-cell span:first-child {
+  font-weight: 700;
+  color: #333;
+}
+
 @media only screen and (max-width: 768px) {
   .notes-table {
     width: 95%;
@@ -206,5 +248,11 @@ mat-large-icon-button {
     width: 95%;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+@media (min-width: 1800px) {
+  .twitter-feeds iframe {
+    height: 800px;
   }
 }
