--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,7 +18,7 @@
 
           <button
             class="btn btn-outline-secondary mobile-button"
-            [routerLink]="['/leaderboard']">
+            (click)="toggleDropdown()">
             Leaderboards
 
             <ul
@@ -74,17 +74,42 @@
             <button
               type="button"
               class="btn-outline-secondary normal-button"
-              [routerLink]="['/dates']">
+              [routerLink]="['/scores']"
+            >
               Scores
             </button>
           </li> -->
           <li class="nav-item">
-            <button
-              type="button"
-              class="btn-outline-secondary normal-button"
-              [routerLink]="['/leaderboard']">
-              Leaderboards
-            </button>
+            <div class="dropdown">
+              <button
+                class="dropdown-button btn-outline-secondary normal-button"
+                (click)="toggleDropdown()">
+                Leaderboards
+              </button>
+              <ul class="dropdown-menu" *ngIf="showDropdown">
+                <li
+                  class="dropdown-item"
+                  (click)="toggleDropdown()"
+                  [routerLink]="['/leaderboard/skaters']">
+                  <mat-icon>ice_skating</mat-icon>
+                  Skaters
+                </li>
+                <li
+                  class="dropdown-item"
+                  (click)="toggleDropdown()"
+                  [routerLink]="['/leaderboard/goalies']">
+                  <mat-icon>sports_hockey</mat-icon>
+                  Goalies
+                </li>
+                <li
+                  class="dropdown-item"
+                  (click)="toggleDropdown()"
+                  [routerLink]="['/leaderboard/teams']">
+                  <mat-icon>group</mat-icon>
+                  Teams
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="nav-item">
             <button
